feat: Implementa geração de gráficos de barras #4
 #2 -> #4

--- a/templates/metrics.jinja
+++ b/templates/metrics.jinja
@@ -102,7 +102,7 @@
                         selected=graph_type,
                         options=[
                         ["line", "Line Graph", true] ,
-                        ["bar", "Bar Graph", false],
+                        ["bar", "Bar Graph", true],
                         ["scatter", "Scatter Plot", false],
                         ]) }}
             {{ select(label="Graph Composition:",
