--- a/templates/metrics.jinja
+++ b/templates/metrics.jinja
@@ -54,6 +54,7 @@
     {% if directories %}
       {% call section("directories") %}
         <h2>Simulation Directories List:</h2>
+
         <div class="mb-3">{{ list_group_text("directory-list", directories) }}</div>
         <div class="btn-group" role="group" aria-label="Directory Actions">
           {{ submit_button('Select All', 'select-all-directories', 'btn-outline-primary', class="me-2") }}
@@ -65,6 +66,32 @@
     {% if grouped_metrics %}
       {% call section("metrics") %}
         <h2>Metrics List:</h2>
+        <div class="btn-group mb-3"
+             role="group"
+             aria-label="Basic radio toggle button group">
+          <input type="radio"
+                 class="btn-check"
+                 name="metric-type"
+                 id="radio-individual"
+                 value="individual"
+                 autocomplete="off"
+                 {% if metric_type == "individual" %}checked{% endif %}>
+          <label class="btn btn-outline-primary" for="radio-individual">Individual</label>
+
+          <input type="radio"
+                 class="btn-check"
+                 name="metric-type"
+                 id="radio-grouped"
+                 value="grouped"
+                 autocomplete="off"
+                 {% if metric_type == "grouped" %}checked{% endif %}>
+          <label class="btn btn-outline-primary" for="radio-grouped">Grouped</label>
+
+        </div>
+        <input id="previous-metric-type"
+               type="hidden"
+               name="previous-metric-type"
+               value="{{ metric_type }}">
         <div class="accordion mb-3" id="accordion">
           {% for metric_group, metric_list in grouped_metrics.items() %}
             <div class="accordion-item">
