feat: Geração de gráficos agrupados #7

--- a/templates/metrics.jinja
+++ b/templates/metrics.jinja
@@ -133,9 +133,9 @@
                         name="graph-type",
                         selected=graph_type,
                         options=[
-                        ["line", "Line Graph", true] ,
-                        ["bar", "Bar Graph", true],
-                        ["scatter", "Scatter Plot", false],
+                        ["line", "Line Graph"] ,
+                        ["bar", "Bar Graph"],
+                        ["stacked-bar", "Stacked Bar Graph"],
                         ]) }}
             {{ select(label="Graph Composition:",
                         name="graph-composition",
