refactor: Altera estrutura do projeto
safs/
├── src/
│   ├── app.py
│   ├── routes/
│   │   └── <rotas da aplicação>
│   ├── static/
│   │   └── <arquivos estáticos>
│   ├── services/
│   │   └── <código utilitário>
│   ├── templates/
│   │   └── <páginas da aplicação>
│   └── data/
│       └── <dados usados>
├── requirements.txt
└── README.md

--- a/src/templates/__macros.jinja
+++ b/src/templates/__macros.jinja
@@ -1,33 +1,22 @@
 {% macro navbarNav(page) %}
-  <div class="collapse navbar-collapse d-flex justify-content-between"
+  <div class="collapse navbar-collapse justify-content-center"
        id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        {% if page == "index" %}
+        {% if page == "home" %}
           <span class="nav-link active" aria-current="page">Home</span>
         {% else %}
           <a class="nav-link" href="{{ url_for('index') }}">Home</a>
         {% endif %}
       </li>
       <li class="nav-item">
-        {% if page == "metrics" %}
-          <span class="nav-link active" aria-current="page">Metrics</span>
+        {% if page == "config" %}
+          <span class="nav-link active" aria-current="page">Config</span>
         {% else %}
-          <a class="nav-link" href="{{ url_for('metrics.metrics_index') }}">Metrics</a>
+          <a class="nav-link" href="{{ url_for('config.index') }}">Config</a>
         {% endif %}
       </li>
-      <li class="nav-item">
-        {# {% if page == "graphs" %}
-          <span class="nav-link active" aria-current="page">Graphs</span>
-        {% else %}
-          <a class="nav-link" href="{{ url_for('graphs.graphs_index') }}">Graphs</a>
-        {% endif %} #}
-        <a class="nav-link disabled" aria-disabled="true">Graphs</a>
-      </li>
     </ul>
-    <form id="navbar-form" class="d-flex">
-      {{ submit_button('Clear Session', 'clear-session', 'btn-outline-danger') }}
-    </form>
   </div>
 {% endmacro %}
 
