--- a/src/templates/config.jinja
+++ b/src/templates/config.jinja
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block navbarNav %}
-  {{ navbarNav("metrics") }}
+  {{ navbarNav("config") }}
 {% endblock navbarNav %}
 
 {% block content %}
