--- a/src/templates/home.jinja
+++ b/src/templates/home.jinja
@@ -6,18 +6,18 @@
 {% endblock title %}
 
 {% block navbarNav %}
-  {{ navbarNav("index") }}
+  {{ navbarNav("home") }}
 {% endblock navbarNav %}
 
 {% block content %}
   <div class="container">
-    <h1 class="mt-4">Welcome to the SAFS Dashboard</h1>
+    <h2>Welcome to the SAFS Dashboard</h2>
     <p class="lead">This dashboard provides an overview of simulation metrics and configurations.</p>
     <p>Use the navigation bar to explore different sections.</p>
   </div>
 
   <div class="container mt-5">
     <h2>Getting Started</h2>
-    <p>To begin, please navigate to the Metrics section to set up your base directory and configurations.</p>
+    <p>To begin, please navigate to the Config section to set up your base directory and configurations.</p>
   </div>
 {% endblock content %}
