--- a/src/templates/__base.jinja
+++ b/src/templates/__base.jinja
@@ -1,3 +1,4 @@
+{% from "__macros.jinja" import submit_button %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,19 +25,25 @@
       .accordion-button::after {
         background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z' /></svg>") !important;
       }
+      main {
+        max-width: 1000px;
+      }
     </style>
   </head>
   <body class="text-bg-dark">
-    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body mb-3"
+    <nav class="navbar navbar-expand-sm bg-dark border-bottom border-body fixed-top"
          data-bs-theme="dark">
-      <div class="container-fluid">
+      <div class="container-fluid mx-4">
         <span class="navbar-brand mb-0 h1">SAFS</span>
         {% block navbarNav required %}
         {% endblock navbarNav %}
+        <form id="navbar-form" class="d-flex">
+          {{ submit_button('Clear Session', 'clear-session', 'btn-outline-danger') }}
+        </form>
       </div>
     </nav>
 
-    <main id="main" class="p-4">
+    <main id="main" class="py-5 mx-auto mt-5">
       {% block content required %}
       {% endblock content %}
     </main>
