--- a/src/templates/__macros.jinja
+++ b/src/templates/__macros.jinja
@@ -1,7 +1,7 @@
 {% macro navbarNav(page) %}
-  <div class="collapse navbar-collapse justify-content-center"
+  <div class="collapse navbar-collapse justify-content-center p-0 m-0"
        id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav fs-4 fw-medium">
       <li class="nav-item">
         {% if page == "home" %}
           <span class="nav-link active" aria-current="page">Home</span>
