refactor: Simplifica compilação de dados

--- a/src/templates/config.jinja
+++ b/src/templates/config.jinja
@@ -2,7 +2,7 @@
 {% from "__macros.jinja" import navbarNav, toast, section, submit_button, input, select, list_group, list_group_text, input_list %}
 
 {% block title %}
-  Metrics
+  Config
 {% endblock title %}
 
 {% block navbarNav %}
